# ladno-smazan

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __main__.py
app/application/handlers/: __init__.py  ask.py  documents.py
app/buisness_logic/: __init__.py  converter.py  documents.py  generation.py  schemas.py
app/functional_components/: __init__.py  agent.py  constants.py  data_loader.py  llm.py  prompts.py  rag_pipeline.py  retriever.py  schemas.py  settings.py
notebooks/: README.md  README.md~  dataset.xlsx  pdf_to_structed.ipynb
tg_bot/tg_bot/: __main__.py
