[tool.poetry]
name = "cp-rag"
version = "0.1.0"
description = ""
authors = ["airina <airina@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.7"
langchain-openai = "^0.2.6"
langsmith = "^0.1.142"
pdf2image = "^1.17.0"
pymilvus = "^2.4.9"
colpali-engine = "^0.3.4"
byaldi = "^0.0.5"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
langchain-community = "^0.3.5"
pypdf = "^5.1.0"
python-docx = "^1.1.2"
reportlab = "^4.2.5"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
